--- a/personal_api/templates/main.html
+++ b/personal_api/templates/main.html
@@ -24,28 +24,28 @@
                         <div class="card-body">
                             <h5 class="card-title">Получить данные о погоде сейчас</h5>
                             <h6 class="card-subtitle mb-2 text-muted">api/weather/lat="широта"&lon="долгота"</h6>
-                            <a href="http://127.0.0.1:8000/api/weather/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
+                            <a href="api/weather/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
                         </div>
                     </div>
                     <div class="card border-warning mb-3 text-centerr" style="width: 22rem;">
                         <div class="card-body">
                             <h5 class="card-title">Получить прогноз погоды</h5>
                             <h6 class="card-subtitle mb-2 text-muted">api/weather/forecast/lat="широта"&lon="долгота"</h6>
-                            <a href="http://127.0.0.1:8000/api/weather/forecast/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
+                            <a href="api/weather/forecast/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
                         </div>
                     </div>
                     <div class="card border-warning mb-3 text-center" style="width: 22rem;">
                         <div class="card-body">
                             <h5 class="card-title">Получить все возможные данные</h5>
                             <h6 class="card-subtitle mb-2 text-muted">api/all_in_one/lat="широта"&lon="долгота"</h6>
-                            <a href="http://127.0.0.1:8000/api/all_in_one/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
+                            <a href="api/all_in_one/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
                         </div>
                     </div>
                     <div class="card border-warning mb-3 text-center" style="width: 22rem;">
                         <div class="card-body">
                             <h5 class="card-title">Получить данные по одежде сейчас</h5>
                             <h6 class="card-subtitle mb-2 text-muted">api/clothes/lat="широта"&lon="долгота"</h6>
-                            <a href="http://127.0.0.1:8000/api/clothes/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
+                            <a href="api/clothes/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
                         </div>
                     </div>
                 </div>
