Added user_id preferences check into algorithm

--- a/personal_api/templates/main.html
+++ b/personal_api/templates/main.html
@@ -37,15 +37,15 @@
                     <div class="card border-warning mb-3 text-center" style="width: 22rem;">
                         <div class="card-body">
                             <h5 class="card-title">Получить все возможные данные</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">api/all_in_one/lat="широта"&lon="долгота"</h6>
-                            <a href="api/all_in_one/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
+                            <h6 class="card-subtitle mb-2 text-muted">api/all_in_one/lat="широта"&lon="долгота"&user_id="id юсера"</h6>
+                            <a href="api/all_in_one/lat=55.742793&lon=37.615401&user_id=ebb2ec647dfb9b03" class="btn btn-warning">See example(Moscow)</a>
                         </div>
                     </div>
                     <div class="card border-warning mb-3 text-center" style="width: 22rem;">
                         <div class="card-body">
                             <h5 class="card-title">Получить данные по одежде сейчас</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">api/clothes/lat="широта"&lon="долгота"</h6>
-                            <a href="api/clothes/lat=55.742793&lon=37.615401" class="btn btn-warning">See example(Moscow)</a>
+                            <h6 class="card-subtitle mb-2 text-muted">api/clothes/lat="широта"&lon="долгота"&user_id="id юсера"</h6>
+                            <a href="api/clothes/lat=55.742793&lon=37.615401&user_id=ebb2ec647dfb9b03" class="btn btn-warning">See example(Moscow)</a>
                         </div>
                     </div>
                 </div>
