Changed user preference philosophy

--- a/personal_api/templates/main.html
+++ b/personal_api/templates/main.html
@@ -63,7 +63,7 @@
                     <div class="card border-info mb-3 text-center" style="width: 22rem;">
                         <div class="card-body">
                             <h5 class="card-title">Изменить предпочтения пользователя</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">api/create_user/name="name"&user_id="user_id"&new_temp_pref="new_temp_pref"</h6>
+                            <h6 class="card-subtitle mb-2 text-muted">api/change_user/name="name"&user_id="user_id"&new_temp_pref="new_temp_pref"&lat="широта"&lon="долгота"</h6>
                         </div>
                     </div>
                 </div>
